testcases/error/cyclic_type_dependency.veryl
module cyclic_type_dependency {
    struct StructA {
        a: StructA,
    }
}
